Link da licença alterado

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 			{% endfor %}
 		</ul>
 		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}.</p>
-        <p class="copyright" style="padding-top:5px;"><a target="_blank" href="https://github.com/Contadoria.github.io/blob/master/LICENSE">Baseado no template <i>Urban</i> da CloudCannon, sob a licença MIT</a>.</p>
+        <p class="copyright" style="padding-top:5px;"><a target="_blank" href="https://github.com/Contadoria/contadoria.github.io/blob/master/LICENSE">Baseado no template <i>Urban</i> da CloudCannon, sob a licença MIT</a>.</p>
 	</div>
 </footer>
