--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -271,3 +271,27 @@ section {
 		color: #fefefe;
 	}
 }
+
+.stats {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;	
+}
+
+.stats-block {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+	margin: 15px;
+	padding: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	color: grey;
+}
+
+.stats-block:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
